--- a/frontendmentor/card-component/style.css
+++ b/frontendmentor/card-component/style.css
@@ -4,7 +4,6 @@
 
 .row {
     display: flex;
-    color: aqua;
 }
 
 .overall {
@@ -16,7 +15,7 @@
 }
 
 .div {
-    color: aliceblue;
+    display: flex;
 }
 
 .test {
@@ -24,5 +23,12 @@
 }
 
 .button-style {
+    background-color: #4CAF50;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
     color: black;
 }
