--- a/frontendmentor/card-component/style.css
+++ b/frontendmentor/card-component/style.css
@@ -22,9 +22,9 @@
     color: red;
 }
 
-.butt-place {
+/* .butt-place {
     display: flex;
-}
+} */
 
 .button-style {
     background-color: #4CAF50;
