--- a/frontendmentor/card-component/style.css
+++ b/frontendmentor/card-component/style.css
@@ -24,16 +24,16 @@
 
 .button-place {
     display: flex;
-    margin: 10 auto;
+    margin: 5 auto;
 }
 
 .button-style {
-    background-color: #4CAF50;
+    background-color: black;
     border: none;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    /* display: inline-block; */
     font-size: 16px;
     color: black;
 }
