--- a/frontendmentor/interactive card/style.css
+++ b/frontendmentor/interactive card/style.css
@@ -3,7 +3,7 @@
 } */
 
 .btn-one {
-    color: #FFF;
+    /* color: #FFF;
     transition: all 0.3s;
     position: relative;
   }
@@ -48,5 +48,5 @@
   }
   .btn-one:hover::after {
     opacity: 0; 
-    transform: scale(0.1, 1);
+    transform: scale(0.1, 1); */
   }
