--- a/frontendmentor/interactive card/style.css
+++ b/frontendmentor/interactive card/style.css
@@ -1,12 +1,8 @@
-/* div {
- color: aliceblue;
-} */
-
-/* .btn-one {
+.btn-one {
   color: #FFF;
   transition: all 0.3s;
   position: relative;
-} */
+}
 
 .btn-one span {
   transition: all 0.3s;
