--- a/frontendmentor/interactive card/style.css
+++ b/frontendmentor/interactive card/style.css
@@ -1,7 +1,12 @@
 .divP {
     display: flex;
+    margin: 0 auto;
 }
 
-/* .hidden {
+.container {
+    display: flex;
+}
 
-} */
+.hidden {
+    display: hidden;
+}
