--- a/frontendmentor/interactive card/style.css
+++ b/frontendmentor/interactive card/style.css
@@ -3,10 +3,10 @@
     margin: 0 auto;
 }
 
-/* .container {
+.container {
     display: flex;
 } */
 
-/* .hidden {
+.hidden {
     display: hidden;
-} */
+}
