--- a/frontendmentor/interactive card/style.css
+++ b/frontendmentor/interactive card/style.css
@@ -3,12 +3,11 @@
     margin: 0 auto;
 }
 
-/* .container {
+.container {
     display: flex;
     margin: 0 auto;
+}
 
-} */
-
-/* .hidden {
+.hidden {
     display: hidden;
-}  */
+} 
