--- a/frontendmentor/interactive card/style.css
+++ b/frontendmentor/interactive card/style.css
@@ -6,8 +6,9 @@
 .container {
     display: flex;
     margin: 0 auto;
-    height: 150px;
-    /* width: 500px; */
+    padding: unset;
+    height: 250px;
+    width: 300px;
 }
 
 .hidden {
